[gd_scene load_steps=8 format=3 uid="uid://b4xxxge1g4rvv"]

[ext_resource type="Texture2D" uid="uid://bo3o2cu7v0vcj" path="res://assets/images/gameMenus/menuDesat.png" id="1_gkdc5"]
[ext_resource type="Script" path="res://gameFolder/menus/Freeplay.gd" id="1_ody2j"]
[ext_resource type="Script" path="res://gameFolder/menus/data/Song.gd" id="2_6j3qw"]
[ext_resource type="PackedScene" uid="uid://bnp1rl11bug1f" path="res://gameFolder/ui/Alphabet.tscn" id="3_y41ba"]
[ext_resource type="Script" path="res://gameFolder/ui/FollowerSprite2D.gd" id="5_bjkt6"]

[sub_resource type="Resource" id="Resource_ic8t5"]
script = ExtResource("2_6j3qw")
name = "Test"
folder = "test"
icon = "bf-pixel"
color = Color(0.482353, 0.839216, 0.964706, 1)
difficulties = Array[String](["normal"])

[sub_resource type="Resource" id="Resource_kowp5"]
script = ExtResource("2_6j3qw")
name = "My Rumble"
folder = "my-rumble"
icon = "face"
color = Color(1, 0, 0, 1)
difficulties = Array[String](["easy", "normal", "hard"])

[node name="Freeplay" type="Node2D"]
script = ExtResource("1_ody2j")
songs = Array[ExtResource("2_6j3qw")]([SubResource("Resource_ic8t5"), SubResource("Resource_kowp5")])

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640.358, 363.5)
scale = Vector2(0.99589, 0.99589)
texture = ExtResource("1_gkdc5")

[node name="Songs_Node" type="Node" parent="."]

[node name="Icons_Node" type="Node" parent="."]

[node name="Templates" type="Node" parent="."]

[node name="Template_Letter" parent="Templates" instance=ExtResource("3_y41ba")]
visible = false
offset_left = 377.0
offset_top = 373.0
offset_right = 377.0
offset_bottom = 373.0

[node name="Template_Icon" type="Sprite2D" parent="Templates"]
visible = false
script = ExtResource("5_bjkt6")
